--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -1,7 +1,7 @@
 *,
 *:before,
 *:after {
-  font-family: "Orbitron", sans-serif;
+  font-family: 'Orbitron', sans-serif;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -16,9 +16,10 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  font-family: "Orbitron", sans-serif;
+  font-family: 'Orbitron', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $main-color;
 }
 
 ul {
@@ -42,6 +43,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
