--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -4,25 +4,19 @@
   justify-content: center;
   flex-direction: column;
   height: 100%;
-  margin: 50px;
-  padding: 20px;
-  padding-top: 0;
+  padding: 50px 70px;
   z-index: 1;
+  position: relative;
 }
 
 .form-content {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  margin: 50px;
-  z-index: 1;
-  padding: 20px;
+  width: 100%;
+  margin-bottom: auto;
 }
 
 .form-label {
   display: block;
-  font-family: "Orbitron", sans-serif;
+  font-family: 'Orbitron', sans-serif;
   font-size: $text-size-md;
   font-style: normal;
   font-weight: normal;
@@ -47,4 +41,72 @@
   &:focus {
     opacity: 1;
   }
+}
+
+.form-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Orbitron', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: $text-size;
+  color: $text-color;
+  letter-spacing: 3px;
+  margin-bottom: 10px;
+}
+
+.form-info {
+  display: block;
+  font-family: 'Orbitron', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 12px;
+  color: $text-color;
+  line-height: 1.2;
+  letter-spacing: 3px;
+  margin-bottom: 20px;
+}
+
+.form-link {
+  display: block;
+  font-family: 'Orbitron', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: $text-size-lg;
+  color: $text-color;
+  word-break: break-all;
+  padding: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  margin-bottom: 5px;
+}
+
+.form-sublink {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Orbitron', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: $text-size;
+  color: $text-color;
+  letter-spacing: 3px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.form-qr-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25vw;
+  height: 25vw;
+  margin: 0 auto;
+  background-color: $text-color;
+}
+
+.form-qr {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
