--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -2,12 +2,20 @@
   background-color: $main-color;
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
   box-shadow: 0 0 5px $primary-color;
-  border-width: 1px;
-  border-style: solid;
-  border-color: $primary-color;
+  border: 1px solid $primary-color;
   border-collapse: collapse;
   width: 100%;
   background-color: rgba(0, 172, 237, 0.2);
+}
+
+.table-container {
+  background-color: $main-color;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
+  box-shadow: 0 0 5px $primary-color;
+  border: 1px solid $primary-color;
+  width: 100%;
+  background-color: rgba(0, 172, 237, 0.2);
+  padding: 20px 40px;
 }
 
 .table-head {
@@ -28,7 +36,7 @@
 
 .table-th,
 .table-td {
-  font-family: "Orbitron", sans-serif;
+  font-family: 'Orbitron', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
