--- a/src/assets/scss/layout/_container.scss
+++ b/src/assets/scss/layout/_container.scss
@@ -6,17 +6,16 @@
   background-position: center 80px;
   background-size: cover;
   min-height: 100vh;
+  width: 100%;
 
   &::before {
     --line: hsl(0 0% 95% / 0.25);
-    content: "";
+    content: '';
     height: 100vh;
     width: 100vw;
     position: fixed;
-    background: linear-gradient(90deg, var(--line) 1px, transparent 1px 10vmin)
-        0 -5vmin / 10vmin 10vmin,
-      linear-gradient(var(--line) 1px, transparent 1px 10vmin) 0 -5vmin / 10vmin
-        10vmin;
+    background: linear-gradient(90deg, var(--line) 1px, transparent 1px 10vmin) 0 -5vmin / 10vmin 10vmin,
+      linear-gradient(var(--line) 1px, transparent 1px 10vmin) 0 -5vmin / 10vmin 10vmin;
     -webkit-mask: linear-gradient(-15deg, transparent 10%, white);
     mask: linear-gradient(-15deg, transparent 10%, white);
     top: 0;
@@ -25,6 +24,7 @@
 }
 
 .container {
-  display: grid;
-  grid-template-columns: 20% auto;
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
 }
