--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -99,9 +99,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 25vw;
-  height: 25vw;
+  width: 22vw;
+  height: 22vw;
   margin: 0 auto;
+  padding: 20px;
   background-color: $text-color;
 }
 
