--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -85,6 +85,7 @@
   padding: 6px 12px;
   color: $primary-color;
   border: none;
+  height: fit-content;
   z-index: 2;
 
   &:focus {
@@ -222,5 +223,33 @@
 
   &:focus {
     outline: none;
+  }
+}
+
+.btn-add {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Orbitron', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: $text-size;
+  letter-spacing: 2px;
+  color: $text-color;
+  height: 35px;
+  width: 35px;
+  min-width: 35px;
+  background: $primary-color;
+  border-width: 1px;
+  border-style: solid;
+  border-color: transparent;
+  box-shadow: inset 0 0 5px $main-color;
+  padding: 0.5em;
+  transition: opacity 0.2s ease;
+  opacity: 0.5;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 1;
   }
 }
