--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -25,6 +25,20 @@
   margin-bottom: 15px;
 }
 
+.form-label-sm {
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  gap: 10px;
+  margin-bottom: 0;
+
+  .form-input {
+    width: 100%;
+  }
+}
+
 .form-input {
   height: 35px;
   min-height: 35px;
@@ -116,4 +130,12 @@
   width: 30%;
   margin-bottom: 20px;
   margin-left: auto;
+}
+
+.form-wrapper {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: calc(100vh - 250px);
 }
