--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -15,14 +15,17 @@
 }
 
 .form-label {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 15px;
   font-family: 'Orbitron', sans-serif;
   font-size: $text-size-md;
   font-style: normal;
   font-weight: normal;
   letter-spacing: 5px;
   color: $text-color;
-  margin-bottom: 15px;
 }
 
 .form-label-sm {
