--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -6,6 +6,7 @@
   border-collapse: collapse;
   width: 100%;
   background-color: rgba(0, 172, 237, 0.2);
+  table-layout: fixed;
 }
 
 .table-step {
