--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -202,6 +202,17 @@
   min-width: 10px;
 }
 
+.btn-copy-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+
+  .btn-copy {
+    margin: 0;
+  }
+}
+
 .btn-copy {
   display: flex;
   align-items: center;
@@ -215,6 +226,7 @@
   color: $main-color;
   padding: 5px 8px;
   margin-left: auto;
+  min-width: 50px;
   cursor: pointer;
 
   &:hover {
