--- a/src/assets/scss/components/_multistep.scss
+++ b/src/assets/scss/components/_multistep.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  gap: 20px;
 
   .multistep-step {
     border: 1px solid $text-color !important;
