--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -224,6 +224,7 @@
   font-weight: normal;
   font-size: 12px;
   color: $main-color;
+  text-transform: capitalize;
   padding: 5px 8px;
   margin-left: auto;
   min-width: 50px;
