--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -16,6 +16,8 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  max-width: 100vw;
+  overflow-x: hidden;
   font-family: 'Orbitron', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
